[gd_scene load_steps=10 format=3 uid="uid://mainmenu0001"]

[ext_resource type="PackedScene" path="res://assets/Doge/doge-body.glb" id="1_carbody"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="2_menuscript"]
[ext_resource type="PackedScene" path="res://assets/Car-Demo-72bc731edd0dfe25539c033f745bd8126d8a8505/cars/Models/Doge/Wheel.glb" id="3_wheel"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sky"]
sky_top_color = Color(0.4, 0.6, 0.9, 1)
sky_horizon_color = Color(0.7, 0.8, 0.95, 1)
ground_bottom_color = Color(0.8, 0.7, 0.5, 1)
ground_horizon_color = Color(0.85, 0.75, 0.6, 1)

[sub_resource type="Sky" id="Sky_main"]
sky_material = SubResource("ProceduralSkyMaterial_sky")

[sub_resource type="Environment" id="Environment_menu"]
background_mode = 2
sky = SubResource("Sky_main")
ambient_light_color = Color(0.9, 0.85, 0.8, 1)
ambient_light_energy = 0.8
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sand"]
albedo_color = Color(0.86, 0.75, 0.52, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_ground"]
size = Vector2(50, 50)
material = SubResource("StandardMaterial3D_sand")

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_button"]
font_size = 32

[node name="MainMenu" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_menu")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, 0.353553, -0.353553, 0, 0.707107, 0.707107, 0.5, -0.612372, 0.612372, 10, 15, 10)
light_color = Color(1, 0.95, 0.85, 1)
light_energy = 1.5
shadow_enabled = true

[node name="SandGround" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_ground")

[node name="CarDisplay" type="Node3D" parent="."]
transform = Transform3D(0.573576, 0, -0.819152, 0, 1, 0, 0.819152, 0, 0.573576, -0.5, 15, 0)

[node name="Body" parent="CarDisplay" instance=ExtResource("1_carbody")]

[node name="WheelFrontLeft" parent="CarDisplay" instance=ExtResource("3_wheel")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.03, 0.35, 1.55)

[node name="WheelFrontRight" parent="CarDisplay" instance=ExtResource("3_wheel")]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, -1, -1.03, 0.35, 1.55)

[node name="WheelRearLeft" parent="CarDisplay" instance=ExtResource("3_wheel")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.03, 0.35, -1.3)

[node name="WheelRearRight" parent="CarDisplay" instance=ExtResource("3_wheel")]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, -1, -1.03, 0.35, -1.3)

[node name="MenuCamera" type="Camera3D" parent="."]
transform = Transform3D(0.965926, 0.0669873, -0.25, 0, 0.966, 0.259, 0.258819, -0.25, 0.933, -4, 1.5, 4)
current = true
fov = 50.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -100.0
offset_right = 350.0
offset_bottom = 100.0
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "RACING GAME"
label_settings = SubResource("LabelSettings_title")

[node name="Spacer" type="Control" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="PlayButton" type="Button" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "PLAY"

[node name="QuitButton" type="Button" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "QUIT"

[node name="MenuScript" type="Node" parent="."]
script = ExtResource("2_menuscript")
